; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_cgroup_apply_firewall.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_cgroup.c_cgroup_apply_firewall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @cgroup_apply_firewall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cgroup_apply_firewall(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @assert(i32* %3)
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @bpf_firewall_compile(i32* %5)
  %7 = icmp slt i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %14

9:                                                ; preds = %1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @bpf_firewall_load_custom(i32* %10)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @bpf_firewall_install(i32* %12)
  br label %14

14:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i64 @bpf_firewall_compile(i32*) #1

declare dso_local i32 @bpf_firewall_load_custom(i32*) #1

declare dso_local i32 @bpf_firewall_install(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
